src/components/ColourSwatch/style.scss
@import "../../styles/base.scss";

.colour-swatch {
    position: relative;
    display: flex;
    width: 100%;
    min-width: 16rem;
    align-items: center;
    gap: 0.75rem;
    border-radius: 2.5rem;
    margin-left: -0.5rem;
    margin-top: 1rem;
    padding: 0.5rem;
    cursor: pointer;

    @include tabletAndUp {
        display: inline-flex;
        max-width: 19rem;
        width: 33%;
        gap: 1rem;
        margin-right: 2rem;
    }

    &:hover {
        background: var(--bg-back-colour);
    }
    &:active {
        background: var(--subtle-colour);
    }   

    .swatch {
        width: 5rem;
        height: 2.5rem;
        border-radius: 2rem;
        background: var(--subtle-colour);

        @include tabletAndUp {
            width: 4rem;
            height: 7rem;
        }
    }

    h4 {
        margin: 0;
        font-size: 1.125rem;
        line-height: 1.375rem;
        color: var(--headline-colour);
    @include tabletAndUp {
        align-items: center;
        width: 33%;
    }
    }

    p {
        margin: 0;
        font-size: 1rem;
        line-height: 1.375rem;
        color: var(--text-colour);
        font-weight: 500;
    }

    .subtle {
        opacity: 0.6;
    }

    .message {
        position: absolute;
        top: 0;
        left: 0;
        width: 100%;
        height: 100%;
        display: flex;
        justify-content: center;
        align-items: center;
        transition: all 0.2s cubic-bezier(0.4, 0, 0.2, 1);
        transform: translateY(1rem);
        opacity: 0;
        pointer-events: none;

        &.is-active {
            transform: translateY(0);
            opacity: 1;
            pointer-events: all;
        }

        span {
            display: inline-block;
            padding: 0.25rem 0.75rem;
            border-radius: 1rem;
            background: var(--headline-colour);
            color: var(--bg-colour);
        }
    }
}

